--- a/beranda.css
+++ b/beranda.css
@@ -27,64 +27,46 @@ body {
 	height				: 130px;
 }
 
-
 /*pengaturan menu */
 #menu{
 	width				: 100%;
-	height				: 40px;
-	background-color	: maroon;
-
+	height				: 100%;
+	background-image	: url(https://s0.bukalapak.com/bukalapak-kontenz-production/content_attachments/58240/w-744/sub_bahasa_pemrograman_5_.jpg);
 }
 /*pengaturan menu*/
 #menu ul {
-	list-style-type		: none;
-	margin				: 0;
-	padding				: 0;
 	overflow			: hidden;
-	background-color	: maroon;
-}
-
-#menu ul li {
-	float				: left;
 }
 
 #menu ul li a {
 	display				: block;
+	font-weight			: bold;
 	color				: white;
-	text-align			: left;
-	padding				: 14px;
+	text-align			: center;
+	padding				: 0;
 	text-decoration		: none;
+	font-size			: 40px;
+	margin-top			: 50px;
+	margin				: 10%;
+	font-family			: Agency FB;
 }
 #menu ul li a:hover {
 	color				: white;
-	background			: #3c4042;
+	background			: maroon;
 }
 
 
 /*pengaturan runningtext*/
 #runningtext{
 	width				: 100%;
-	height				: 25px;
+	height				: 40px;
 	padding-top			: 7px;
-	margin				: 5px 0 5px 0;
+	margin-top			: 5px;
 	background-color	: black;
 	color				: white;
 	position			: relative;
+	font-size			: 25px;
 }
-
-
-/*pengaturan gambar yang di halaman depan*/
-.gambardepan{
-	float				: bottom;
-	height				: 100%;
-	width				: 100%;
-	margin-right		: 5px;
-	margin-top			: 0px;
-	padding				: 0px;
-	border				: 0px solid #dddddd;
-	background-image	: url(https://s0.bukalapak.com/bukalapak-kontenz-production/content_attachments/58240/w-744/sub_bahasa_pemrograman_5_.jpg);
-}
-
 
 #footer{
 	width				: 100%;
