--- a/kontak.css
+++ b/kontak.css
@@ -4,11 +4,7 @@ body {
 	text-align			: center;
 	font-family			: Verdana, Tahoma, Helvetica;
 	font-size			: 12px;
-}
-
-
-
-/* pengaturan layout utama */
+}/* pengaturan layout utama */
 #layout {
 	background			: #fff;
 	width				: 980px;
@@ -26,7 +22,6 @@ body {
 	width				: 100%;
 	height				: 130px;
 }
-
 
 /*pengaturan menu */
 #menu{
@@ -61,49 +56,40 @@ body {
 }
 
 
-
-/*pengaturan isi*/
-#isi{
-	padding				: 5px;
-	width				: 99%;
-	height				: auto;
-	background-color	: #ccc;
-	position			: relative;
-	margin-top			: 5px;
+#kontak{
+	padding: 5px;
+	width: 99%;
+	height: auto;
+	background-color: white;
+	position: relative;
+	margin: auto;
+	font-size: 20px;
 }
-/*pengaturan postingan*/
-.isipostingan{
-	background-image	: url(https://www.educenter.id/wp-content/uploads/2016/08/Manfaat-Pelajaran-Matematika.jpg);
-	width				: 98%;
-	height				: auto;
-	margin-bottom		: 5px;
-	padding				: 5px;
+.kontak{
+	background-color: none;
+	width: 100%;
+	height: auto;
+	margin-bottom: 5px;
 }
-
-/*pengaturan heading2 "Judul" */
 h2{
-	font-family			: Agency FB;
-	font-size			: 35px;
-	color				: black;
-	margin-top			: 30px;
-	margin-bottom		: 25px;
-	text-decoration		: underline;
+	background-color: maroon;
+	height: 40px;
+	color: white;
+	text-align: center;
+	padding-top: 4px;
+	padding-bottom: 10px;
+	font-size: 30px;
 }
-h3{
-	text-align			: center;
-	font-size			: 25px;
-	font-family			: Agency FB;
-	margin-bottom		: 10px;
-	color				: white;
+.tabelkontak{
+	color: marroon;
+	padding-left: 20px;
 }
-p{
-	text-align			: center;
-	font-size			: 20px;
-	font-family			: Agency FB;
-	margin-bottom		: 20px;
-	color				: white;
+.kolom1 {
+	width: 20%x;
 }
-	
+.kolom2 {
+	width: 80%;
+}	
 
 
 #footer{
